--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "pinia": "^2.1.7",
+    "secure-ls": "^2.0.0",
     "vant": "^4.9.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
