--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.7.7",
     "pinia": "^2.1.7",
     "secure-ls": "^2.0.0",
+    "v-viewer": "^3.0.20",
     "vant": "^4.9.7",
+    "viewerjs": "^1.11.6",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
