--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^2.0.0",
     "axios": "^1.7.7",
     "pinia": "^2.1.7",
+    "qrcode": "^1.5.4",
     "secure-ls": "^2.0.0",
     "v-viewer": "^3.0.20",
     "vant": "^4.9.7",
     "viewerjs": "^1.11.6",
-    "vue": "^3.4.29",
+    "vue": "^3.5.12",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
