--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_END_POINT=https://yrs_backend.test/api
+VITE_API_END_POINT=https://admin-panel.yrs.apexyadana.com/api
 VITE_LS_ENCODING_TYPE="aes"
 VITE_LS_ENCRYPTION_SECRET="yrs123!@#"
 VITE_LS_META_KEY="__yrs-secure-ls"
