--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^2.0.0",
     "axios": "^1.7.7",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "qrcode": "^1.5.4",
     "secure-ls": "^2.0.0",
